# grancvi

./: .dockerignore  .env.example  .env.prod.example  .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  SPEC.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
docs/: claude-project-brief.md  project-overview.md
migrations/: env.py
scripts/: bootstrap-vps.sh  healthcheck.py
src/: app_bot_main.py  config.py  exceptions.py  fsm_storage.py  main.py  strings.py
tests/: conftest.py  test_api_auth.py  test_api_bookings.py  test_api_health.py  test_api_master.py  test_api_me.py  test_api_public_bookings.py  test_api_register.py  test_app_bot_handlers.py  test_availability.py  test_availability_day_loads.py  test_callback_data_epic4.py  test_callback_data_epic5.py  test_callback_data_epic9.py  test_callbacks_epic6.py  test_config.py  test_exceptions_epic9.py  test_fsm_master_add.py  test_fsm_master_register_epic9.py  test_fsm_master_view.py  test_handlers_admin_invites.py  test_handlers_admin_masters.py  test_handlers_admin_menu.py  test_handlers_admin_moderation.py  test_handlers_admin_salon_invite.py  test_handlers_admin_start.py  test_handlers_admin_stats.py  test_handlers_client_booking.py  test_handlers_client_cancel.py  test_handlers_client_catalog.py  test_handlers_client_deep_link.py  test_handlers_master_add_part_a.py  test_handlers_master_add_part_b.py  test_handlers_master_approve.py  test_handlers_master_calendar.py  test_handlers_master_cancel.py  test_handlers_master_client_page.py  test_handlers_master_mark_past.py  (+69 more)
(+170 files in other folders)
